--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ __pycache__/
 *$py.class
 *.so
 .Python
-venv/
 env/
+venv/
 ENV/
 .venv
 
@@ -14,13 +14,18 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
+
+# Build outputs
 dist/
 build/
+*.egg-info/
 
-# Environment
+# Environment variables
 .env
 .env.local
-.env.*.local
+.env.production
+.env.development
 
 # IDE
 .vscode/
@@ -33,14 +38,12 @@ build/
 .DS_Store
 Thumbs.db
 
-# Model files (keep these, but ignore if regenerated)
-# Uncomment if you want to ignore model files:
-# *.pkl
-
-# Data files (keep these, but ignore if regenerated)
-# Uncomment if you want to ignore data files:
-# *.csv
-
 # Logs
 *.log
-logs/
+
+# Vite
+vite.config.js.timestamp-*
+
+# Backup files
+*.backup
+*.bak
