--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,12 @@ services:
     name: moskita-backend
     env: python
     buildCommand: pip install -r backend/requirements.txt
-    startCommand: cd backend && uvicorn app:app --host 0.0.0.0 --port $PORT
+    startCommand: cd backend && python -m uvicorn app:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
+      - key: FRONTEND_URL
+        value: https://mos-kita.vercel.app
     plan: free
     region: singapore
 
